[gd_scene load_steps=11 format=3 uid="uid://b5k71jys0pd2j"]

[ext_resource type="Script" uid="uid://m5a3vsvyjtyy" path="res://scripts/Shop/shop.gd" id="1_lx5au"]
[ext_resource type="Texture2D" uid="uid://doh6ipc6su173" path="res://assets/shopBackgroundSprite.png" id="2_1l46r"]
[ext_resource type="Texture2D" uid="uid://b0ovfif1lo2wd" path="res://assets/healingItemSprite2d.png" id="2_xfvoa"]
[ext_resource type="Texture2D" uid="uid://dm0u4iiwc1dl1" path="res://assets/goatShopKeeperCutiePatootie.png" id="4_032fp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1l46r"]
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.181818, 0.0924473, 0.0488487, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_xfvoa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bdmwb"]
resource_name = "TransIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -600), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lx5au"]
resource_name = "TransOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 600)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1l46r"]
_data = {
&"RESET": SubResource("Animation_xfvoa"),
&"TransIn": SubResource("Animation_bdmwb"),
&"TransOut": SubResource("Animation_lx5au")
}

[sub_resource type="GDScript" id="GDScript_xfvoa"]
resource_name = "GoldLabel"
script/source = "extends Label

func _process(delta):
	text = \"Gold \" + str(ShopManager.gold)
"

[node name="Shop" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_lx5au")

[node name="Panel" type="Panel" parent="."]
offset_left = 96.0
offset_top = 80.0
offset_right = 1056.0
offset_bottom = 560.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1l46r")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 952.0
offset_bottom = 472.0
texture = ExtResource("2_1l46r")
expand_mode = 1
stretch_mode = 1

[node name="Anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../Panel")
libraries = {
&"": SubResource("AnimationLibrary_1l46r")
}

[node name="Close" type="Button" parent="."]
offset_left = 944.0
offset_top = 96.0
offset_right = 1040.0
offset_bottom = 144.0
theme_override_font_sizes/font_size = 24
text = "Close"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(576, 264)
scale = Vector2(0.16, 0.159)
texture = ExtResource("2_xfvoa")

[node name="Name" type="Label" parent="Control"]
layout_mode = 0
offset_left = 352.0
offset_top = 96.0
offset_right = 800.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 24
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Des" type="Label" parent="Control"]
layout_mode = 0
offset_left = 368.0
offset_top = 360.0
offset_right = 784.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 20
text = "Description asdsadada"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Next" type="Button" parent="Control"]
layout_mode = 0
offset_left = 704.0
offset_top = 192.0
offset_right = 784.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 40
text = ">"

[node name="Prev" type="Button" parent="Control"]
layout_mode = 0
offset_left = 368.0
offset_top = 192.0
offset_right = 448.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 40
text = "<"

[node name="Buy" type="Button" parent="Control"]
layout_mode = 0
offset_left = 504.0
offset_top = 472.0
offset_right = 648.0
offset_bottom = 514.0
theme_override_font_sizes/font_size = 24
text = "Purchase"

[node name="ShopKeeperSprite2d" type="Sprite2D" parent="Control"]
position = Vector2(232, 264)
scale = Vector2(0.169922, 0.175781)
texture = ExtResource("4_032fp")

[node name="Gold" type="Label" parent="."]
offset_left = 112.0
offset_top = 96.0
offset_right = 336.0
offset_bottom = 144.0
theme_override_font_sizes/font_size = 24
script = SubResource("GDScript_xfvoa")

[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Control/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Control/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Control/Buy" to="." method="_on_buy_pressed"]
